<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/about_page_image"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:background="@drawable/team"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_about_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_about_page"
                android:layout_marginTop="@dimen/margin_top_about_page_content"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/about_heading"
                android:textColor="@color/colorAboutTitle"
                android:textSize="@dimen/about_heading_text_size"
                app:layout_constraintBottom_toTopOf="@+id/txt_about_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_page_image" />

            <TextView
                android:id="@+id/txt_about_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_bottom_about_page_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/about_content"
                android:textSize="@dimen/about_content_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_about_heading"
                app:layout_constraintTop_toBottomOf="@+id/txt_about_heading" />

            <TextView
                android:id="@+id/txt_team_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_about_page_content"
                android:layout_marginBottom="@dimen/margin_bottom_about_page_content"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/organizing_team_heading"
                android:textColor="@color/colorOnBackground"
                android:textSize="@dimen/about_heading_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_about_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/organizersList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_bottom_about_page_content"
                android:layout_marginVertical="@dimen/margin_bottom_about_page_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_team_heading"
                app:spanCount="3"
                tools:listitem="@layout/item_organizer" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_organizers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_horizontal_about_page"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/organizersList">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/rl_organizers_margin">

                    <TextView
                        android:id="@+id/txt_organizers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:text="@string/organized_by_txt"
                        android:textColor="@color/colorOnBackground"
                        android:textSize="@dimen/organized_by_txt_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCompanyOrganizers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/txt_organizers"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="6dp"
                        tools:listitem="@layout/item_company_organizer"
                        tools:itemCount="5"
                        app:spanCount="3"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>